<resources>
<!--    <string name="app_name">Budget accounting</string>-->
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_add">ADD EXPENSE</string>
    <string name="empty_expense">specify expense</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="success_added">Income/expense was successfully added</string>
    <string name="connection_lost">Sorry, we can\'t load your money list</string>
    <string name="login">Login</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="budget_accounting">Budget accounting</string>
    <string name="delete_items_title">Delete items</string>
    <string name="delete_items_message">Are you sure you want to delete this items?</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>
    <string name="selected">Selected: %d</string>
    <string name="add_item_title">Add element</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="balance">Balance</string>
</resources>