<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtBalanceFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/balance"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBalanceFinanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/accent_second"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="@+id/txtBalanceFinance"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinance"
        tools:text="67000" />

    <View
        android:id="@+id/dividerFinance"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="38dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinanceValue" />

    <LinearLayout
        android:id="@+id/llExpenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="26dp"
        android:paddingEnd="15dp"
        android:paddingBottom="26dp"
        app:layout_constraintEnd_toStartOf="@+id/llIncomes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerFinance">

        <TextView
            android:id="@+id/txtBalanceCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/expenses"
            android:textColor="@color/primaryTextColor"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_expenses_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            tools:text="5400₽" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="26dp"
        android:paddingEnd="15dp"
        android:paddingBottom="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llExpenses"
        app:layout_constraintTop_toBottomOf="@id/dividerFinance">

        <TextView
            android:id="@+id/txtBalanceIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/income"
            android:textColor="@color/primaryTextColor"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_incomes_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent_color"
            android:textSize="24sp"
            tools:text="74000₽" />

    </LinearLayout>

    <View
        android:id="@+id/dividerData"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/llIncomes" />

    <com.loftschool.helloworld.fragment_balance.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerData" />

</androidx.constraintlayout.widget.ConstraintLayout>